--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -10,6 +10,7 @@ header {
   margin-bottom: 20px;
   background-color: rgb(244, 79, 79);
   display: flex;
+  text-align: center;
 }
 
 h1 {
@@ -26,8 +27,7 @@ main {
 }
 
 .contents {
-  flex-direction : column;
-  border: 3px solid rgb(238, 204, 204); /* 線（太さ3px、実線、色） */
+ border: 3px solid rgb(238, 204, 204); /* 線（太さ3px、実線、色） */
   flex-basis: 25%; /* 幅を親要素の25%に */
   padding: 10px 15px; /* 内側の余白：上下10px、左右15px */
   margin: 20px 0; /* 外側の余白：上下20px、左右0 */
